Tenant and Auth Object
